@@ -1,7 +1,7 @@
 /* myhtmlparse.cc: subclass of HtmlParser for extracting text.
  *
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004,2006,2007,2008,2010,2011 Olly Betts
+ * Copyright 2002,2003,2004,2006,2007,2008,2010,2011,2012 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -54,14 +54,15 @@ MyHtmlParser::process_text(const string &text)
 	string::size_type b = text.find_first_not_of(WHITESPACE);
 	if (b) pending_space = true;
 	while (b != string::npos) {
-	    if (pending_space && !dump.empty()) dump += ' ';
+	    if (pending_space && !target->empty())
+		*target += ' ';
 	    string::size_type e = text.find_first_of(WHITESPACE, b);
 	    pending_space = (e != string::npos);
 	    if (!pending_space) {
-		dump.append(text.data() + b, text.size() - b);
+		target->append(text.data() + b, text.size() - b);
 		return;
 	    }
-	    dump.append(text.data() + b, e - b);
+	    target->append(text.data() + b, e - b);
 	    b = text.find_first_not_of(WHITESPACE, e + 1);
 	}
     }
@@ -76,10 +77,6 @@ MyHtmlParser::opening_tag(const string &tag)
 	    if (tag == "address") pending_space = true;
 	    break;
 	case 'b':
-	    if (tag == "body") {
-		dump.resize(0);
-		break;
-	    }
 	    if (tag == "blockquote" || tag == "br") pending_space = true;
 	    break;
 	case 'c':
@@ -222,6 +219,10 @@ MyHtmlParser::opening_tag(const string &tag)
 	case 't':
 	    if (tag == "table" || tag == "td" || tag == "textarea" ||
 		tag == "th") pending_space = true;
+	    else if (tag == "title") {
+		target = &title;
+		pending_space = false;
+	    }
 	    break;
 	case 'u':
 	    if (tag == "ul") pending_space = true;
@@ -242,9 +243,6 @@ MyHtmlParser::closing_tag(const string &tag)
 	    if (tag == "address") pending_space = true;
 	    break;
 	case 'b':
-	    if (tag == "body") {
-		return false;
-	    }
 	    if (tag == "blockquote" || tag == "br") pending_space = true;
 	    break;
 	case 'c':
@@ -293,12 +291,13 @@ MyHtmlParser::closing_tag(const string &tag)
 	    if (tag == "select") pending_space = true;
 	    break;
 	case 't':
-	    if (tag == "title") {
-		if (title.empty()) swap(title, dump);
-		break;
-	    }
 	    if (tag == "table" || tag == "td" || tag == "textarea" ||
 		tag == "th") pending_space = true;
+	    else if (tag == "title") {
+		target = &dump;
+		pending_space = false;
+		break;
+	    }
 	    break;
 	case 'u':
 	    if (tag == "ul") pending_space = true;
